--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -11,4 +11,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.hikari.maximum-pool-size=30
-application.theme.color=dark
+application.theme.color=blue
