--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -7,8 +7,9 @@ spring.datasource.password=P@ssword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.hikari.maximum-pool-size=30
+spring.datasource.hikari.connection-timeout=60000
 application.theme.color=blue
