--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -9,7 +9,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.connection-timeout=60000
 application.theme.color=blue
