--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -1,7 +1,7 @@
 # application-prod.properties
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/mphasis
+spring.datasource.url=jdbc:mysql://localhost:3306/services
 spring.datasource.username=root
 spring.datasource.password=P@ssword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
